# dotAux

./: Macros.COPYING  README
dotat/: COPYING  Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.ac
dotat/dotaux/: daln  dotaux
dotat/dotaux/dmeta/: da.conf  dac.m4  das.m4  dat.m4
dotat/tests/: Makefile.am  Makefile.in  extra.mk  local.at  package.m4  testsuite.at
dotat/tests/at/: local.m4  testgnu.at
dotat/tests/at/m4sh/: box.as  box.at  config_shell.as  config_shell.at  dir_basename.as  dir_basename.at  echo.as  echo.at  for.as  for.at  help_str.as  help_str.at  lineno.as  lineno.at  local.m4  logfd.as  me.as  me.at  path.as  require.as  require.at  set_catfile.as  set_catfile.at  shell_fn.as  shell_fn.at  var.as  var.at  ver_comp.as  ver_comp.at  warn_error.as  warn_error.at
dotat/tests/at/m4sugar/: defn.as  defn.at  dumpdef.as  dumpdef.at  local.m4  stack_foreach.as  stack_foreach.at  subst.as  subst.at  warn.as  warn.at
dotaux/: AUTHORS  COPYING  Macros.COPYING  Makefile.am  Makefile.in  NAMESPACE  configure  configure.ac  dadep.mk
dotaux/dotaux/: dadlm  damk  dotaux
dotaux/dotaux/dmeta/: das.m4  dat.m4
dotaux/share/dotaux/: Makefile.am  Makefile.in  dotaux.pc.in  vpath.mk
dotaux/tests/: Makefile.am  Makefile.in  extra.mk  local.at  package.m4  testsuite.at
dotaux/tests/at/: testlib.at
